--- a/Front-end/src/app/login/login.component.html
+++ b/Front-end/src/app/login/login.component.html
@@ -14,5 +14,6 @@
 <div mat-dialog-actions [align]="'end'">
     <button mat-raised-button color="warn" mat-dialog-close>Cancel</button>
     <button mat-raised-button color="primary" (click)="loginUser()">Login</button>
+    <button mat-raised-button color="accent" (click)="changePassword()">Change Password</button>
      Register here??? <button mat-raised-button color="primary" (click)="registerUser()">Register</button>
 </div>
