--- a/Front-end/src/app/app.component.scss
+++ b/Front-end/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import "primeicons/primeicons.css";
+
 .example-spacer{
     flex: 1 1 auto;
 }
@@ -15,4 +17,35 @@ table {
     max-width: 1200px;
     margin: 0 auto;
 }
+
+.sync-button {
+    display: inline-block;
+    padding: 2px 10px;
+    border: 1px solid #007bff; 
+    border-radius: 4px;
+    cursor: pointer;
+    text-decoration: none;
+    color: #007bff; 
+    font-size: 10px;
+}
+
+.sync-button:hover {
+    background-color: #007bff; 
+    color: #fff; 
+}
+  
+.card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .panel-menu-container {
+    width: 100px;
+  }
+  
+  .logged-in-user {
+    margin-left: 10px;
+    font-weight: bold;
+  }
   
