--- a/Front-end/src/app/dialog/dialog.component.html
+++ b/Front-end/src/app/dialog/dialog.component.html
@@ -14,18 +14,15 @@
       <input formControlName="fullName" matInput placeholder="Full Name">
     </mat-form-field>
     <mat-form-field appearance="outline">
-      <mat-label>Position:</mat-label>
-      <mat-select formControlName="position" placeholder="Choose Position">
-        <mat-option value="Choosen">Chosen Position</mat-option>
-      </mat-select>
-    </mat-form-field>
+      <mat-label>Position Name</mat-label>
+      <input matInput formControlName="positionName" placeholder="Position Name">
+    </mat-form-field>    
     <mat-form-field appearance="outline">
       <mat-label>Hire Date:</mat-label>
       <input formControlName="hireDate" matInput [matDatepicker]="picker">
-      <mat-hint>MM/DD/YYYY</mat-hint>
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
+    </mat-form-field>    
   </form>
 </div>
 <div mat-dialog-actions [align]="'end'">
